# adaptive-gripper-digital-twin.

./: .dockerignore  .gitignore  DIGITAL_TWIN_SETUP.md  Dockerfile  README.md  Robotic.gazebo  Robotic.trans  Robotic.xacro  kill_gazebo_rviz.sh  render_entrypoint.sh  spawn_robot.py  start_digital_twin.sh  stop_digital_twin.sh
.qwen/: settings.json  settings.json.orig
install/: local_setup.sh  setup.sh
install/adaptive_gripper_description/share/adaptive_gripper_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/adaptive_gripper_description/share/adaptive_gripper_description/cmake/: adaptive_gripper_descriptionConfig.cmake
install/adaptive_gripper_description/share/adaptive_gripper_description/config/: joint_limits.yaml
install/adaptive_gripper_description/share/adaptive_gripper_description/launch/: display.launch.py
install/adaptive_gripper_description/share/adaptive_gripper_description/urdf/: adaptive_gripper_arm.urdf
install/robotic_control/lib/robotic_control/: adaptive_grip_controller  data_exporter  fsr_gazebo_sync
install/robotic_control/share/robotic_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robotic_control/share/robotic_control/config/: gripper_params.yaml
install/robotic_control/share/robotic_control/launch/: phase2_hardware.launch.py
install/robotic_description/lib/robotic_description/: arm_mover.py  gripper_mover.py
install/robotic_description/share/robotic_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robotic_description/share/robotic_description/cmake/: robotic_descriptionConfig-version.cmake  robotic_descriptionConfig.cmake
install/robotic_description/share/robotic_description/config/: controllers.yaml
install/robotic_description/share/robotic_description/environment/: ament_prefix_path.dsv  path.dsv
install/robotic_description/share/robotic_description/launch/: display.launch.py  gazebo.launch.py  sim_control.launch.py
install/robotic_description/share/robotic_description/meshes/: Motor Micro 9g.stl  Motor_Micro_9g_1 (3).stl  Motor_Micro_9g_1_1 (2).stl  Motor_Micro_9g_1_1_1 (1).stl  Motor_Micro_9g_1_1_1_1.stl  Motor_Micro_9g_1_1__1__1.stl  Motor_Micro_9g_1__1__1 (1).stl  Motor_Micro_9g_1__1__1_1.stl  Motor_Micro_9g_1__2__1.stl  Servo Motor MG996R.stl  Servo Motor Micro  9g.stl  arm_complete.stl  base_link.stl  forearm_link.stl  gear1_r1.stl  gear2_r1.stl  grip link 1_r1.stl  gripper_assembly.stl  gripper_base.stl  gripper_link.stl  shoulder_link.stl  upper_arm_link.stl  wrist_link.stl
install/robotic_description/share/robotic_description/urdf/: Robotic.gazebo  Robotic.trans  Robotic.xacro  adaptive_gripper_arm.urdf  materials.xacro  robotic_arm.urdf
log/: latest_build
src/adaptive_gripper_description/: CMakeLists.txt  package.xml
src/robotic_control/: setup.cfg  setup.py
src/robotic_control/analysis/: analyze_session.py
src/robotic_control/firmware/: gripper_sensor_firmware.ino
src/robotic_control/launch/: phase1_simulation.launch.py  rosbridge_websocket.launch.py
src/robotic_control/scripts/: adaptive_grip_controller.py  fake_sensor_publisher.py  gazebo_contact_bridge.py  motion_loop_publisher.py  ros2_to_relay_publisher.py
src/robotic_description/: CMakeLists.txt  package.xml
src/robotic_description/config/: controllers.yaml
src/robotic_description/launch/: display.launch.py  gazebo.launch.py  sim_control.launch.py
src/robotic_description/meshes/: Motor Micro 9g.stl  Motor_Micro_9g_1_1_1 (1).stl  Servo Motor MG996R.stl  Servo Motor Micro  9g.stl  base_link.stl  forearm_link.stl  gear1_r1.stl  gear2_r1.stl  grip link 1_r1.stl  gripper_assembly.stl  gripper_base.stl  gripper_link.stl  shoulder_link.stl  upper_arm_link.stl  wrist_link.stl
src/robotic_description/scripts/: arm_mover.py  gripper_mover.py
src/robotic_description/urdf/: Robotic.gazebo  Robotic.trans  Robotic.xacro  adaptive_gripper_arm.urdf  robotic_arm.urdf
(+4 files in other folders)
