<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotic_description</name>
  <version>0.1.0</version>
  <description>4-DOF adaptive gripper arm package for ROS2 Humble + Gazebo Classic 11</description>
  <maintainer email="nisharu@todo.todo">nisharu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>

  <!-- Gazebo Classic dependencies -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>

  <!-- ROS2 Control dependencies -->
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>xacro</depend>

  <!-- Joint State Broadcaster -->
  <depend>joint_state_broadcaster</depend>

  <!-- Testing and linting -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
